<resources>
    <string name="app_name">FunCode</string>
    <string name="initNumber">0</string>
    <string name="count">加一</string>
    <string name="reset">重置</string>
    <string name="number_hint">$0.00</string>
    <string name="percent">打折(0%)</string>
    <string name="discount_price">打折後價格</string>
    <string name="description">拖動進度條</string>
    <string name="album">相簿</string>
    <string name="camera">相機</string>
    <string name="search_hint">關鍵詞</string>
    <string name="search">搜尋</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_detail">HomeDetailActivity</string>
    <string name="title_activity_home_detailactivity">HomeDetailactivity</string>
    <string name="home">Home</string>
    <string name="home_2">Home 2</string>
    <string name="home_3">Home 3</string>
    <string name="push_home_3">Push to Home 3</string>
    <string name="go_to_home">Go to Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="push">push</string>
    <string name="notification">Notification</string>
    <string name="page">0 / 0</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="zero_percent">0%</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="date_hint">pick a date</string>
    <string name="time_hint">pick a time</string>
    <string name="go">GO</string>
    <string name="user_name">使用者名稱</string>
    <string name="zero">0</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="show_name">Show Name</string>
    <string name="one_by_one">One By One</string>
    <string name="same_time">Same Time</string>
    <string name="accelerate">Accelerate</string>
    <string name="anticipate">Anticipate</string>
    <string name="accelerateDecelerate">AccelerateDecelerate</string>
    <string name="overshoot">Overshoot</string>
    <string name="anticipateOvershoot">AnticipateOvershoot</string>
    <string name="cycle">Cycle</string>
    <string name="bounce">Bounce</string>
    <string name="decelerate">Decelerate</string>
    <string name="linear">Linear</string>
    <string name="send_notification">Send Notification</string>
    <string name="nest">Nest</string>
    <string name="chicken">Chicken</string>
    <string name="egg">Egg</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="player">Player</string>
    <string name="recorder">Recoder</string>
    <string name="play">Play</string>
    <string name="record">Record</string>
    <string name="turn">Turn</string>
    <string name="catTransition">CatTransition</string>
    <string name="textTransition">TextTransition</string>
    <string name="explode">Explode</string>
    <string name="slide">Slide</string>
    <string name="fade">Fade</string>
</resources>
