<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="animations.Animation4Activity">

    <Button
        android:id="@+id/Button_Accelerate"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/accelerate"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_Bounce"
        app:layout_constraintEnd_toEndOf="@+id/Button_Bounce"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button_Anticipate"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/anticipate"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_Accelerate"
        app:layout_constraintEnd_toEndOf="@+id/Button_Accelerate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button_AccelerateDecelerate"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/accelerateDecelerate"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_AnticipateOvershoot"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button_Overshoot"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/overshoot"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_AnticipateOvershoot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Button_AnticipateOvershoot" />

    <Button
        android:id="@+id/Button_Linear"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/linear"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_Overshoot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Button_Overshoot" />

    <Button
        android:id="@+id/Button_Decelerate"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/decelerate"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_Linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Button_Linear" />

    <Button
        android:id="@+id/Button_Cycle"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/cycle"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_Anticipate"
        app:layout_constraintEnd_toEndOf="@+id/Button_Anticipate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button_AnticipateOvershoot"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/anticipateOvershoot"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_AccelerateDecelerate" />

    <Button
        android:id="@+id/Button_Bounce"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        android:text="@string/bounce"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_AccelerateDecelerate"
        app:layout_constraintEnd_toEndOf="@+id/Button_AccelerateDecelerate"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ImageView_Don"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_don" />

</android.support.constraint.ConstraintLayout>