<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp">

    <View
        android:id="@+id/View_BG_Description"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="#4A90E2"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageView3" />

    <ImageView
        android:id="@+id/ImageView1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/TextView_Project"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ImageView1"
        app:layout_constraintTop_toTopOf="@+id/ImageView1" />

    <TextView
        android:id="@+id/TextView_Description"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ImageView1"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Project" />

    <ImageView
        android:id="@+id/ImageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/ImageView1"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Description"
        app:srcCompat="@drawable/icon_star" />

    <ImageView
        android:id="@+id/ImageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/TextView_Star"
        app:layout_constraintTop_toTopOf="@+id/TextView_Star"
        app:srcCompat="@drawable/icon_repo_forked" />

    <ImageView
        android:id="@+id/ImageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/TextView_Fork"
        app:layout_constraintTop_toTopOf="@+id/TextView_Fork"
        app:srcCompat="@drawable/icon_user" />

    <TextView
        android:id="@+id/TextView_Star"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/ImageView2"
        app:layout_constraintTop_toTopOf="@+id/ImageView2" />

    <TextView
        android:id="@+id/TextView_Fork"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/ImageView3"
        app:layout_constraintTop_toTopOf="@+id/ImageView3" />

    <TextView
        android:id="@+id/TextView_UserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/TextView_Description"
        app:layout_constraintStart_toEndOf="@+id/ImageView4"
        app:layout_constraintTop_toTopOf="@+id/ImageView4" />
</android.support.constraint.ConstraintLayout>